--- a/index.html
+++ b/index.html
@@ -55,76 +55,81 @@
   </head>
 
   <body>
-    <div class="container">
-      <!-- Modal for rendering the charts, declare this if you want to render charts, 
-         else you remove the modal -->
-      <div id="modal1" class="modal">
-        <canvas id="modal-chart"></canvas>
-      </div>
-
-      <!--chatbot widget -->
-      <div class="widget">
-        <div class="chat_header">
-          <!--Add the name of the bot here -->
-          <span class="chat_header_title">Sara</span>
-          <span class="dropdown-trigger" href="#" data-target="dropdown1">
-            <i class="material-icons"> more_vert </i>
-          </span>
-
-          <!-- Dropdown menu-->
-          <ul id="dropdown1" class="dropdown-content">
-            <li><a href="#" id="clear">Clear</a></li>
-            <li><a href="#" id="restart">Restart</a></li>
-            <li><a href="#" id="close">Close</a></li>
-          </ul>
+      <header>
+        <p>This is the header</p>
+      </header>
+      <main>
+      <div class="container">
+        <!-- Modal for rendering the charts, declare this if you want to render charts, 
+           else you remove the modal -->
+        <div id="modal1" class="modal">
+          <canvas id="modal-chart"></canvas>
         </div>
 
-        <!--Chatbot contents goes here -->
-        <div class="chats" id="chats">
-          <div class="clearfix"></div>
+        <!--chatbot widget -->
+        <div class="widget">
+          <div class="chat_header">
+            <!--Add the name of the bot here -->
+            <span class="chat_header_title">Sara</span>
+            <span class="dropdown-trigger" href="#" data-target="dropdown1">
+              <i class="material-icons"> more_vert </i>
+            </span>
+
+            <!-- Dropdown menu-->
+            <ul id="dropdown1" class="dropdown-content">
+              <li><a href="#" id="clear">Clear</a></li>
+              <li><a href="#" id="restart">Restart</a></li>
+              <li><a href="#" id="close">Close</a></li>
+            </ul>
+          </div>
+
+          <!--Chatbot contents goes here -->
+          <div class="chats" id="chats">
+            <div class="clearfix"></div>
+          </div>
+
+          <!--keypad for user to type the message -->
+          <div class="keypad">
+            <textarea
+              id="userInput"
+              placeholder="Type a message bitch..."
+              class="usrInput"
+            ></textarea>
+            <div id="sendButton">
+              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+            </div>
+          </div>
         </div>
 
-        <!--keypad for user to type the message -->
-        <div class="keypad">
-          <textarea
-            id="userInput"
-            placeholder="Type a message bitch..."
-            class="usrInput"
-          ></textarea>
-          <div id="sendButton">
-            <i class="fa fa-paper-plane" aria-hidden="true"></i>
+        <!--bot profile-->
+        <div class="profile_div" id="profile_div">
+          <img class="imgProfile" src="static/img/botAvatar.png" />
+        </div>
+
+        <!-- Bot pop-up intro -->
+        <div class="tap-target" data-target="profile_div">
+          <div class="tap-target-content">
+            <h5 class="white-text">Hey there 👋</h5>
+            <p class="white-text">
+              I am your personal assistant, you can ask me anything! almost...
+            </p>
           </div>
         </div>
       </div>
 
-      <!--bot profile-->
-      <div class="profile_div" id="profile_div">
-        <img class="imgProfile" src="static/img/botAvatar.png" />
-      </div>
+      <!--JavaScript at end of body for optimized loading-->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script
+        type="text/javascript"
+        src="static/js/lib/materialize.min.js"
+      ></script>
+      <script src="static/js/lib/uuid.min.js"></script>
+      <!--Main Script -->
+      <script type="text/javascript" src="static/js/script.js"></script>
 
-      <!-- Bot pop-up intro -->
-      <div class="tap-target" data-target="profile_div">
-        <div class="tap-target-content">
-          <h5 class="white-text">Hey there 👋</h5>
-          <p class="white-text">
-            I am your personal assistant, you can ask me anything! almost...
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <!--JavaScript at end of body for optimized loading-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script
-      type="text/javascript"
-      src="static/js/lib/materialize.min.js"
-    ></script>
-    <script src="static/js/lib/uuid.min.js"></script>
-    <!--Main Script -->
-    <script type="text/javascript" src="static/js/script.js"></script>
-
-    <!--Chart.js Script -->
-    <script type="text/javascript" src="static/js/lib/chart.min.js"></script>
-    <script type="text/javascript" src="static/js/lib/showdown.min.js"></script>
+      <!--Chart.js Script -->
+      <script type="text/javascript" src="static/js/lib/chart.min.js"></script>
+      <script type="text/javascript" src="static/js/lib/showdown.min.js"></script>
+    </main>
   </body>
 </html>
