--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div>
         <div class="container__item">
           <img class="container__item-icon" src="static/img/calendar.png" alt="Schedule image">
-          <p class="container__item-text">-Schedule-</p>
+          <p class="container__item-text">-Timetable-</p>
         </div>
         <div class="container__item">
           <p class="container__item-text">-PDF-</p>
@@ -76,10 +76,10 @@
         </div>
         <div class="container__item">
           <img class="container__item-icon" src="static/img/clock.png" alt="Clock image">
-          <p class="container__item-text">-Clock-</p>
+          <p class="container__item-text">-Assignments-</p>
         </div>
         <div class="container__item">
-          <p class="container__item-text">-Link-</p>
+          <p class="container__item-text">-"1-2-1"-</p>
           <img class="container__item-icon" src="static/img/link.png" alt="Link image">
         </div>
       </div>
@@ -95,7 +95,7 @@
         <div class="widget">
           <div class="chat_header">
             <!--Add the name of the bot here -->
-            <span class="chat_header_title">Sara</span>
+            <span class="chat_header_title">Hose</span>
             <span class="dropdown-trigger" href="#" data-target="dropdown1">
               <i class="material-icons"> more_vert </i>
             </span>
@@ -136,7 +136,7 @@
           <div class="tap-target-content">
             <h5 class="white-text">Hey there 👋</h5>
             <p class="white-text">
-              I am your personal assistant, you can ask me anything! almost...
+              I am your personal assistant, you can ask me anything!
             </p>
           </div>
         </div>
