--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <body>
     <header>
       <h1 class="title">
-        <span class="title__module"><img class="logo" src="static/img/coventry.png" alt="Coventry University Logo">303COM - Individual Module</span>
+        <span class="title__module"><img class="logo" src="static/img/coventry.png" alt="Coventry University Logo">303COM - Individual Project</span>
         <span class="title__author">- Alberto Paros -</span>
       </h1>
     </header>
