--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
 
         <!-- Bot pop-up intro -->
-        <div class="tap-target" data-target="profile_div">
+<!--         <div class="tap-target" data-target="profile_div">
           <div class="tap-target-content">
             <h5 class="white-text">Hey there 👋</h5>
             <p class="white-text">
@@ -140,7 +140,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
