--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div>
         <div class="container__item">
           <img class="container__item-icon" src="static/img/calendar.png" alt="Schedule image">
-          <p class="container__item-text">-Timetable-</p>
+          <p class="container__item-text">-Timetable- you can view your personal timetable by eighter asking complex questions such as "What is my personal timetable for this week?" or by simply typing "week"</p>
         </div>
         <div class="container__item">
           <p class="container__item-text">-PDF-</p>
