--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
     </header>
     <main>
     
-      <h2 class="container__title">Title</h2>
+      <h2 class="container__title">What can it do?</h2>
 
       <div>
         <div class="container__item">
           <img class="container__item-icon" src="static/img/calendar.png" alt="Schedule image">
-          <p class="container__item-text">-Timetable- you can view your personal timetable by eighter asking complex questions such as "What is my personal timetable for this week?" or by simply typing "week"</p>
+          <p class="container__item-text">You can view your personal timetable by eighter asking complex questions such as "What is my personal timetable for this week?" or by simply typing "week"</p>
         </div>
         <div class="container__item">
           <p class="container__item-text">-PDF-</p>
