changed the avatar

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <!--bot profile-->
         <div class="profile_div" id="profile_div">
-          <img class="imgProfile" src="static/img/botAvatar.png" />
+          <img class="imgProfile" src="static/img/sara_avatar.png" />
         </div>
 
         <!-- Bot pop-up intro -->
