addedd the other png's

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
     <main>
     
-      <h2 class="container__title">What can it do?</h2>
+      <h2 class="container__title">Abilities</h2>
 
       <div>
         <div class="container__item">
@@ -71,7 +71,7 @@
           <p class="container__item-text">You can view your personal timetable by eighter asking complex questions such as "What is my personal timetable for this week?" or by simply typing "week"</p>
         </div>
         <div class="container__item">
-          <p class="container__item-text">-PDF-</p>
+          <p class="container__item-text">You can have quick access to PDS's such as "What is the EEC code?" or "Give me the Harry Poter's Sourcere's stone book"</p>
           <img class="container__item-icon" src="static/img/pdf.png" alt="PDF image">
         </div>
         <div class="container__item">
@@ -81,6 +81,14 @@
         <div class="container__item">
           <p class="container__item-text">-"1-2-1"-</p>
           <img class="container__item-icon" src="static/img/link.png" alt="Link image">
+        </div>
+        <div class="container__item">
+          <p class="container__item-text">-"grade"-</p>
+          <img class="container__item-icon" src="static/img/grade.png" alt="Grade image">
+        </div>
+        <div class="container__item">
+          <p class="container__item-text">-"info"-</p>
+          <img class="container__item-icon" src="static/img/info.png" alt="Info image">
         </div>
       </div>
 
