--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
     <main>
     
-      <h2 class="container__title">Abilities</h2>
+      <h2 class="container__title">Features</h2>
 
       <div>
         <div class="container__item">
@@ -71,24 +71,32 @@
           <p class="container__item-text">You can view your personal timetable by eighter asking complex questions such as "What is my personal timetable for this week?" or by simply typing "week"</p>
         </div>
         <div class="container__item">
-          <p class="container__item-text">You can have quick access to PDS's such as "What is the EEC code?" or "Give me the Harry Poter's Sourcere's stone book"</p>
+          <p class="container__item-text">You can have quick access to PDS's such as "Show me the EEC Handbook" or "Give me the Harry Poter's Sourcere's stone book"</p>
           <img class="container__item-icon" src="static/img/pdf.png" alt="PDF image">
         </div>
         <div class="container__item">
           <img class="container__item-icon" src="static/img/clock.png" alt="Clock image">
-          <p class="container__item-text">-Assignments-</p>
+          <p class="container__item-text">You can view your upcomming assignments by typing: "Show me all of my assignments" or simply "assignments"</p>
         </div>
         <div class="container__item">
-          <p class="container__item-text">-"1-2-1"-</p>
+          <p class="container__item-text">You can set up 1-2-1 meetings with your supervior by typing: "I want to set up a 1-2-1 meeting with my supervisor" or simply "1-2-1"</p>
           <img class="container__item-icon" src="static/img/link.png" alt="Link image">
         </div>
         <div class="container__item">
-          <p class="container__item-text">-"grade"-</p>
           <img class="container__item-icon" src="static/img/grade.png" alt="Grade image">
+          <p class="container__item-text">You can view your grades in a Bar Chart style by typing "Show me all of my grades" or simply "grades"</p>
         </div>
         <div class="container__item">
-          <p class="container__item-text">-"info"-</p>
+          <p class="container__item-text">You can access the core details relating your course, such as "EEC Handbok" or "Programme Specification", just ask!</p>
           <img class="container__item-icon" src="static/img/info.png" alt="Info image">
+        </div>
+        <div class="container__item">
+          <p class="container__item-text-center">There are many other features such as Chit-Chat. You can ask "What is the weather like?" or "Tell me a joke!" <br> <br> Please try and give me your honest feedback as it will help me greatly for this study :) Thank you!"</p>
+        </div>
+        <div class="container__item">
+          <a href="https://forms.gle/4h5qsswBquRsM8398" class="container__item-icon-center">
+            <img class="container__item-icon-center" src="static/img/survey.png" alt="Info image">
+          </a>
         </div>
       </div>
 
