changed the feedback text

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       <div>
         <div class="container__item">
           <img class="container__item-icon" src="static/img/calendar.png" alt="Schedule image">
-          <p class="container__item-text">You can view your personal timetable by eighter asking complex questions such as <span style="color: #ED5794">What is my personal timetable for this week?</span> or by simply typing <span style="color: #ED5794">week</span></p>
+          <p class="container__item-text">You can view your personal timetable by either asking complex questions such as <span style="color: #ED5794">What is my personal timetable for this week?</span> or by simply typing <span style="color: #ED5794">week</span></p>
         </div>
         <div class="container__item">
-          <p class="container__item-text">You can have quick access to PDS's such as <span style="color: #ED5794">Show me the EEC Handbook</span> or <span style="color: #ED5794">Give me the Harry Poter's Sourcere's stone book"</p>
+          <p class="container__item-text">You can have quick access to PDF's such as <span style="color: #ED5794">Show me the EEC Handbook</span> or <span style="color: #ED5794">Give me the Harry Poter's Sourcere's stone book"</p>
           <img class="container__item-icon" src="static/img/pdf.png" alt="PDF image">
         </div>
         <div class="container__item">
@@ -91,7 +91,7 @@
           <img class="container__item-icon" src="static/img/info.png" alt="Info image">
         </div>
         <div class="container__item">
-          <p class="container__item-text-center">There are many other features such as Chit-Chat. You can ask <span style="color: #ED5794">What is the weather like?</span> or <span style="color: #ED5794">Tell me a joke!</span> <br> <br> Please try and give me your honest <span style="color: #fcb603">feedback</span> as it will help me greatly for this study :) Thank you!"</p>
+          <p class="container__item-text-center">There are many other features such as Chit-Chat. You can ask <span style="color: #ED5794">What is the weather like?</span> or <span style="color: #ED5794">Tell me a joke!</span> <br> <br> Please try and give me your honest <span style="color: #fcb603">Feedback</span> as it will help me greatly for this study :) Thank you!"</p>
         </div>
         <div class="container__item">
           <a href="https://forms.gle/4h5qsswBquRsM8398" class="container__item-icon-center">
