--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <img class="container__item-icon" src="static/img/info.png" alt="Info image">
         </div>
         <div class="container__item">
-          <p class="container__item-text-center">There are many other features such as Chit-Chat. You can ask <span style="color: #ED5794">What is the weather like?</span> or <span style="color: #ED5794">Tell me a joke!</span> <br> <br> Please try and give me your honest <span style="color: #fcb603">Feedback</span> as it will help me greatly for this study :) Thank you!"</p>
+          <p class="container__item-text-center">There are many other features such as Chit-Chat. You can ask <span style="color: #ED5794">What is the weather like?</span> or <span style="color: #ED5794">Tell me a joke!</span> <br> <br> Please try and give me your honest <span style="color: #fcb603">Feedback</span> as it will help me greatly with this study :) Thank you!"</p>
         </div>
         <div class="container__item">
           <a href="https://forms.gle/4h5qsswBquRsM8398" class="container__item-icon-center">
