--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
           <p class="container__item-text">You can view your personal timetable by either asking complex questions such as <span style="color: #ED5794">What is my personal timetable for this week?</span> or by simply typing <span style="color: #ED5794">week</span></p>
         </div>
         <div class="container__item">
-          <p class="container__item-text">You can have quick access to PDF's such as <span style="color: #ED5794">Show me the EEC Handbook</span> or <span style="color: #ED5794">Give me the Harry Poter's Sourcere's stone book"</p>
+          <p class="container__item-text">You can have quick access to PDF's such as <span style="color: #ED5794">Show me the EEC Handbook</span> or <span style="color: #ED5794">Give me the Harry Poter Sorcerer's stone book"</p>
           <img class="container__item-icon" src="static/img/pdf.png" alt="PDF image">
         </div>
         <div class="container__item">
           <img class="container__item-icon" src="static/img/clock.png" alt="Clock image">
-          <p class="container__item-text">You can view your upcomming assignments by typing <span style="color: #ED5794">Show me all of my assignments</span> or simply <span style="color: #ED5794">assignments</span></p>
+          <p class="container__item-text">You can view your upcoming assignments by typing <span style="color: #ED5794">Show me all of my assignments</span> or simply <span style="color: #ED5794">assignments</span></p>
         </div>
         <div class="container__item">
-          <p class="container__item-text">You can set up 1-2-1 meetings with your supervior by typing <span style="color: #ED5794">I want to set up a 1-2-1 meeting with my supervisor</span> or simply <span style="color: #ED5794">1-2-1</span></p>
+          <p class="container__item-text">You can set up 1-2-1 meetings with your supervisor by typing <span style="color: #ED5794">I want to set up a 1-2-1 meeting with my supervisor</span> or simply <span style="color: #ED5794">1-2-1</span></p>
           <img class="container__item-icon" src="static/img/link.png" alt="Link image">
         </div>
         <div class="container__item">
@@ -87,7 +87,7 @@
           <p class="container__item-text">You can view your grades in a Bar Chart style by typing <span style="color: #ED5794">Show me all of my grades</span> or simply <span style="color: #ED5794">grades</span></p>
         </div>
         <div class="container__item">
-          <p class="container__item-text">You can access the core details relating your course, such as <span style="color: #ED5794">EEC Handbok</span> or <span style="color: #ED5794">Programme Specification</span>, just ask!</p>
+          <p class="container__item-text">You can access the core details relating your course, such as <span style="color: #ED5794">EEC Handbook</span> or <span style="color: #ED5794">Programme Specification</span>, just ask!</p>
           <img class="container__item-icon" src="static/img/info.png" alt="Info image">
         </div>
         <div class="container__item">
