added github link

--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
             <img class="container__item-icon-center" src="static/img/survey.png" alt="Info image">
           </a>
         </div>
+        <div class="container__item">
+          <a href="https://github.com/mibalbert/303COM-RasaChatbot" class="container__item-icon-center2">
+            <img class="container__item-icon-center2" src="static/img/github.png" alt="Info image">
+          </a>
+        </div>
       </div>
 
       <div class="container">
