--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
         </div>
 
         <!-- Bot pop-up intro -->
-<!--         <div class="tap-target" data-target="profile_div">
+        <div class="tap-target" data-target="profile_div">
           <div class="tap-target-content">
-            <h5 class="white-text">Hey there 👋</h5>
+            <h5 class="white-text">Hola! 👋</h5>
             <p class="white-text">
-              I am your personal assistant, you can ask me anything!
+              I am Hose, your personal assistant!
             </p>
           </div>
         </div>
-      </div> -->
+      </div>
 
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
