added the shoes

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
   <body>
     <header>
       <h1 class="title">
-        <span class="title__module"><img class="logo" src="static/img/coventry.png" alt="Coventry University Logo">303COM - Individual Project</span>
-        <span class="title__author">- Alberto Paros -</span>
+        <!-- <span class="title__module"><img class="logo" src="static/img/coventry.png" alt="Coventry University Logo">303COM - Individual Project</span>
+        <span class="title__author">- Alberto Paros -</span> -->
+        <span class="title__author">- Hose Chatbot -</span>
       </h1>
     </header>
     <main>
@@ -91,18 +92,23 @@
           <img class="container__item-icon" src="static/img/info.png" alt="Info image">
         </div>
         <div class="container__item">
-          <p class="container__item-text-center">There are many other features such as Chit-Chat. You can ask <span style="color: #ED5794">What is the weather like?</span> or <span style="color: #ED5794">Tell me a joke!</span> <br> <br> Please try and give me your honest <span style="color: #fcb603">Feedback</span> as it will help me greatly with this study :) Thank you!"</p>
-        </div>
-        <div class="container__item">
-          <a href="https://forms.gle/4h5qsswBquRsM8398" class="container__item-icon-center">
-            <img class="container__item-icon-center" src="static/img/survey.png" alt="Info image">
-          </a>
+          <p class="container__item-text-center">There are many other features such as Chit-Chat. You can ask <span style="color: #ED5794">What is the weather like?</span> or <span style="color: #ED5794">Tell me a joke!</span> <br> <!-- <br> --> 
+
+            <!-- Please try and give me your honest <span style="color: #fcb603">Feedback</span> as it will help me greatly with this study :) Thank you!"
+ -->
+          </p>
         </div>
         <div class="container__item">
           <a href="https://github.com/mibalbert/303COM-RasaChatbot" class="container__item-icon-center2">
             <img class="container__item-icon-center2" src="static/img/github.png" alt="Info image">
           </a>
         </div>
+        <!-- <div class="container__item">
+          <a href="https://forms.gle/4h5qsswBquRsM8398" class="container__item-icon-center2">
+            <img class="container__item-icon-center2" src="static/img/survey.png" alt="Info image">
+          </a>
+        </div>
+         -->
       </div>
 
       <div class="container">
@@ -157,7 +163,7 @@
           <div class="tap-target-content">
             <h5 class="white-text">Hola! 👋</h5>
             <p class="white-text">
-              I am Hose, your personal assistant!
+              I am Hose, your personal assistant.
             </p>
           </div>
         </div>
