--- a/index.html
+++ b/index.html
@@ -171,17 +171,17 @@
 
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script
+      <!-- <script
         type="text/javascript"
         src="static/js/lib/materialize.min.js"
       ></script>
-      <script src="static/js/lib/uuid.min.js"></script>
+      <script src="static/js/lib/uuid.min.js"></script> -->
       <!--Main Script -->
       <script type="text/javascript" src="static/js/script.js"></script>
 
       <!--Chart.js Script -->
-      <script type="text/javascript" src="static/js/lib/chart.min.js"></script>
-      <script type="text/javascript" src="static/js/lib/showdown.min.js"></script>
+      <!-- <script type="text/javascript" src="static/js/lib/chart.min.js"></script>
+      <script type="text/javascript" src="static/js/lib/showdown.min.js"></script> -->
     </main>
   </body>
 </html>
